--- a/app/styles/layout/_main.scss
+++ b/app/styles/layout/_main.scss
@@ -33,11 +33,12 @@ a {
   width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 4em 0;
+  display: inline-block;
+  white-space: nowrap;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  position: absolute;
+  position: relative;
 }
 
