--- a/app/styles/layout/_transitions.scss
+++ b/app/styles/layout/_transitions.scss
@@ -1,24 +1,22 @@
 #transition-wrapper {
   width: 200%;
-  min-height: 100%;
-  // height: 200%;
-  position: absolute;
+  height: 100%;
+  position: relative;
   top: 0;
   left: 0;
-  background-color: rgba(100,0,200,0.1);
+  display: inline-block;
 }
 
 #transition-left,
 #transition-right {
   width: 50%;
+  height: 100%;
 }
 
 #transition-left {
 	float: left;
-  // background-color: rgba(100,0,255,0.4);
 }
 
 #transition-right {
 	float: right;
-  // background-color: rgba(60,255,60,0.3);
 }
